# ai-search-agent

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
ai_search_agent/: __init__.py  api.py  cli.py  db.py  pipeline.py  preflight.py  prompts.py  snapshot_operations.py  web_operations.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SettingsModal.tsx  Starfield.tsx
tests/: test_api_endpoints.py  test_pipeline_unit.py  test_preflight_unit.py  test_prompts.py
